--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -112,6 +112,7 @@
     <Compile Include="EntityConfigurations\BusinessRules\BRActionConfiguration.cs" />
     <Compile Include="EntityConfigurations\BusinessRules\BRActionParamsConfiguration.cs" />
     <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentTemplateConfiguration.cs" />
+    <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentTextConditionIdentifierConfiguration.cs" />
     <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentTextIdentifierConfiguration.cs" />
     <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentTextConditionConfiguration.cs" />
     <Compile Include="EntityConfigurations\CaseDocument\CaseDocumentParagraphConditionConfiguration.cs" />
@@ -255,6 +256,7 @@
     <Compile Include="Mappers\Calendars\BusinessModelToEntity\CalendarToEntityMapper.cs" />
     <Compile Include="Mappers\Calendars\EntityToBusinessModel\CalendarToBusinessModelMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentTemplateToEntityMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentTextConditionIdentifierToEntityMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentTextIdentifierToEntityMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentTextConditionToEntityMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentParagraphConditionToEntityMapper.cs" />
@@ -262,6 +264,7 @@
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentParagraphToEntityMapper.cs" />
     <Compile Include="Mappers\CaseDocument\BusinessModelToEntity\CaseDocumentConditionToEntityMapper.cs" />
     <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentTemplateToBusinessModelMapper.cs" />
+    <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentTextCaseIdentifierToBusinessModelMapper.cs" />
     <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentTextIdentifierToBusinessModelMapper.cs" />
     <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentTextConditionToBusinessModelMapper.cs" />
     <Compile Include="Mappers\CaseDocument\EntityToBusinessModel\CaseDocumentParagraphConditionToBusinessModelMapper.cs" />
@@ -450,10 +453,12 @@
     <Compile Include="Repositories\ADFS\IADFSRepository.cs" />
     <Compile Include="Repositories\BusinessRules\Concrete\BusinessRuleRepository.cs" />
     <Compile Include="Repositories\BusinessRules\IBusinessRuleRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentTextConditionIdentifierRepository.cs" />
     <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentTextIdentifierRepository.cs" />
     <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentTextConditionRepository.cs" />
     <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentRepository.cs" />
     <Compile Include="Repositories\CaseDocument\Concrete\CaseDocumentConditionRepository.cs" />
+    <Compile Include="Repositories\CaseDocument\ICaseDocumentTextConditionIdentifierRepository.cs" />
     <Compile Include="Repositories\CaseDocument\ICaseDocumentTextIdentifierRepository.cs" />
     <Compile Include="Repositories\CaseDocument\ICaseDocumentTextRepository.cs" />
     <Compile Include="Repositories\CaseDocument\ICaseDocumentRepository.cs" />
