--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -1975,6 +1975,7 @@
     <Compile Include="Infrastructure\UrlHelpers\Mvc\Invoices\MvcOrdersUrlName.Overview.cs" />
     <Content Include="Areas\Orders\Views\Orders\EditorTemplates\Fields\MultiText.cshtml" />
     <Content Include="Areas\Admin\Views\QuickLink\_QuickLinksRows.cshtml" />
+    <Content Include="Areas\Admin\Views\CustomerCaseFieldSettings\_HeaderDialog.cshtml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="ReportViewerWebForm.aspx" />
     <Content Include="Content\js\Shared\custom.validation.reuiredifnotempty.js" />
