[ADD] #58180 Attach existing files in case log

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Models\Licenses\Computers\ComputerOverview.cs" />
     <Compile Include="Models\DailyReport\Output\DailyReportSubject.cs" />
     <Compile Include="Models\LogProgram\LogProgram.cs" />
+    <Compile Include="Models\Logs\LogExistingFileModel.cs" />
     <Compile Include="Models\Logs\Output\EmailLogsOverview.cs" />
     <Compile Include="Models\MailTemplates\CustomMailTemplateLanguage.cs" />
     <Compile Include="Models\Modules\Output\ModulesOverview.cs" />
