--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -150,6 +150,7 @@
     <Compile Include="EmailSendStatus.cs" />
     <Compile Include="Invoice\InvoiceArticleProductAreaEntity.cs" />
     <Compile Include="Invoice\InvoiceStatus.cs" />
+    <Compile Include="LogFileExisting.cs" />
     <Compile Include="Mail2Ticket.cs" />
     <Compile Include="FormUrl.cs" />
     <Compile Include="FileViewLogEntity.cs" />
