[FIX] #58210 Hide buttons at top in Self - Service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -86,10 +86,16 @@
     </accessManagment>
   </formLibConfigurable>
   <connectionStrings>
-    <add name="DSN" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" />
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
+    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
+    <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;"/>
+    <add name="DSN" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
+    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
+
+    <!--<add name="DSN" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
-    <add name="DSN_AM" connectionString="Password=Ikea!2367;Persist Security Info=True;User ID=dhamdb;Initial Catalog=CFSQL0030;Data Source=CFPSEELM-NT2008;MultipleActiveResultSets=True" />
+    <add name="DSN_AM" connectionString="Password=Ikea!2367;Persist Security Info=True;User ID=dhamdb;Initial Catalog=CFSQL0030;Data Source=CFPSEELM-NT2008;MultipleActiveResultSets=True" />-->
   </connectionStrings>
   <appSettings>
     <add key="LoginMode" value="Windows" />
@@ -102,7 +108,7 @@
     <!-- For self/service line manager -->
     <add key="InitFromSelfService" value="true" />
     <add key="InitFromSelfServiceWorkflowInitValue" value="10" />
-    <add key="DefaultUserId" value="tstmgrstd" />
+    <add key="DefaultUserId" value="" />
     <add key="DefaultEmployeeNumber" value="" />
     <add key="ida:FederationMetadataLocation" value="https://sts.ikeadt.com/federationmetadata/2007-06/federationmetadata.xml" />
     <add key="ida:Issuer" value="https://sts.ikeadt.com/adfs/ls/" />
@@ -112,7 +118,7 @@
 
 
     <add key="CaseList" value="coworkers" />
-    <add key="CurrentApplication" value="LineManager" />
+    <add key="CurrentApplication" value="SelfService" />
     <!-- "SelfService", "LineManager" -->
 
     <!-- Single Sign Keys-->
