--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -20,82 +20,34 @@
     <accessManagment>
       <api uriPath="http://myhrservices-access.ikea.com/" username="AdminTest1" password="asd123!" />
       <countries>
-        <country helpdeskCustomerId="21" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="2" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="3" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="4" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="5" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="7" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="8" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="10" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="12" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="13" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="14" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="15" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="16" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="17" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="18" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="22" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="23" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="24" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="25" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="26" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="27" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="28" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="9" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="11" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="19" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="20" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="30" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="31" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="32" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="33" employeePrefix="08" code="UK" />
-        <country helpdeskCustomerId="34" employeePrefix="11" code="IE" />
-        <country helpdeskCustomerId="35" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="36" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="37" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="38" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="39" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="40" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="41" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="42" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="43" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="44" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="29" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="44" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="45" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="46" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="47" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="48" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="49" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="50" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="51" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="52" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="53" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="54" employeePrefix="41" code="KR" />
-        <country helpdeskCustomerId="55" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="56" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="57" employeePrefix="05" code="NL" />
-        <country helpdeskCustomerId="58" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="59" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="60" employeePrefix="xx" code="" />
-        <country helpdeskCustomerId="64" employeePrefix="20" code="NO" />
-        <country helpdeskCustomerId="70" employeePrefix="00" code="ST" />
-        <country helpdeskCustomerId="72" employeePrefix="13" code="AU" />
+        <country helpdeskCustomerId="29" employeePrefix="05" code="NL" />
+        <country helpdeskCustomerId="30" employeePrefix="08" code="UK" />
+        <country helpdeskCustomerId="31" employeePrefix="11" code="IE" />
+        <country helpdeskCustomerId="32" employeePrefix="41" code="KR" />
+        <country helpdeskCustomerId="34" employeePrefix="20" code="NO" />
+        <country helpdeskCustomerId="39" employeePrefix="00" code="ST" />
+        <country helpdeskCustomerId="43" employeePrefix="13" code="AU" />
       </countries>
     </accessManagment>
   </formLibConfigurable>
   <connectionStrings>
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
+    <!--<add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
     <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;"/>
     <add name="DSN" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
-    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
+    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
 
     <!--<add name="DSN" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123" providerName="System.Data.OleDb" />
     <add name="DSN_AM" connectionString="Password=Ikea!2367;Persist Security Info=True;User ID=dhamdb;Initial Catalog=CFSQL0030;Data Source=CFPSEELM-NT2008;MultipleActiveResultSets=True" />-->
+  
+  
+    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />	
+	  <add name="AccessManagementDB" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />
+    
   </connectionStrings>
   <appSettings>
     <add key="LoginMode" value="Windows" />
@@ -118,7 +70,7 @@
 
 
     <add key="CaseList" value="coworkers" />
-    <add key="CurrentApplication" value="SelfService" />
+    <add key="CurrentApplication" value="LineManager" />
     <!-- "SelfService", "LineManager" -->
 
     <!-- Single Sign Keys-->
@@ -131,15 +83,19 @@
     <add key="ClaimEmail" value="emailaddress" />
     <add key="ClaimPhone" value="Phone"/>
     <add key="SSOLog" value="true" />
-    <add key="DefaultEmployeeNumber" value="00999999" />
+    <add key="DefaultEmployeeNumber" value="13106668" />
     <add key="LogoutUrl" value="https://sts.ikeadt.com/adfs/ls/?wa=wsignout1.0" />
 
 
     <!-- Access Management API Keys-->
-    <add key="AM_Api_UriPath" value="http://cfmyhrservices-access.ikeadt.com" />
+    <!--<add key="AM_Api_UriPath" value="http://cfmyhrservices-access.ikeadt.com" />
     <add key="AM_Api_UserName" value="DHS" />
-    <add key="AM_Api_Password" value="asd123!" />
+    <add key="AM_Api_Password" value="asd123!" />-->
 
+     <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
+    <add key="AM_Api_UserName" value="OperatorTest" />
+    <add key="AM_Api_Password" value="asd123!" />
+  
   </appSettings>
   
   <!--
