--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\CaseDocument\CaseDocumentConditionModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentParagraphType.cs" />
     <Compile Include="Models\CaseType\CaseTypeItem.cs" />
+    <Compile Include="Models\Case\CaseOverviewCriteriaModel.cs" />
     <Compile Include="Models\Case\AuxCaseModel.cs" />
     <Compile Include="Models\Case\CaseModel.cs" />
     <Compile Include="Models\Case\CaseFileDate.cs" />
@@ -276,6 +277,7 @@
     <Compile Include="Models\Accounts\AccountSettings\Read\Processing\UserFieldSettings.cs" />
     <Compile Include="Models\Department\DepartmentOverview.cs" />
     <Compile Include="Models\Email\EmailResponse.cs" />
+    <Compile Include="Models\Employee\EmployeeModel.cs" />
     <Compile Include="Models\Error\ErrorModel.cs" />
     <Compile Include="Models\ExtendedCase\InitExtendedForm.cs" />
     <Compile Include="Models\ExternalInvoice\ExternalInvoice.cs" />
@@ -926,6 +928,7 @@
     <Compile Include="Models\Supplier\Output\SupplierOverview.cs" />
     <Compile Include="Models\Systems\Output\SystemOverview.cs" />
     <Compile Include="Models\Translation2.cs" />
+    <Compile Include="Models\WebApi\WebApiCredentialModel.cs" />
     <Compile Include="Models\WorkflowStepModel.cs" />
     <Compile Include="Models\Users\Input\UserModule.cs" />
     <Compile Include="Models\Users\Output\ModuleOverview.cs" />
