[ADD] #59136 Emojies 0 - 9 for feedback

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -603,6 +603,25 @@
     <Content Include="Content\img\clip.png" />
     <Content Include="Content\img\dh_solutions_version.png" />
     <Content Include="Content\img\glyphicons-dh.png" />
+    <Content Include="Content\img\ic_0_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_0_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_1_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_1_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_2_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_3_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_3_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_4_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_4_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_5_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_5_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_6_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_6_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_7_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_7_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_8_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_8_black_24dp_2x.png" />
+    <Content Include="Content\img\ic_9_black_24dp_1x.png" />
+    <Content Include="Content\img\ic_9_black_24dp_2x.png" />
     <Content Include="Content\img\ic_sentiment_dissatisfied_black_24dp_1x.png" />
     <Content Include="Content\img\ic_sentiment_dissatisfied_black_24dp_2x.png" />
     <Content Include="Content\img\ic_sentiment_neutral_black_24dp_1x.png" />
